--- a/flask_sample/templates/layout.html
+++ b/flask_sample/templates/layout.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
     <title>お問い合わせフォーム</title>
+    {% block style %}
+    {% endblock %}
   </head>
   <body style="padding-top: 60px; ">
     <nav class="navbar fixed-top navbar-fixed-top navbar-expand-sm navbar-dark bg-dark">
