--- a/flask_sample/templates/info/info.html
+++ b/flask_sample/templates/info/info.html
@@ -6,19 +6,19 @@
 <div class="d-flex flex-column bd-highlight mb-3">
   <div class="form-group">
     <label for="text1">お名前(必須):</label>
-    <input type="text" id="name" name="name" class="form-control required" required>
+    <input type="text" id="name" name="name" class="form-control required" placeholder='名前を入力してください' required autofocus>
   </div>
   <div class="form-group">
     <label for="text2">件名(必須):</label>
-    <input type="text" id="subject" name="subject" class="form-control required" required>
+    <input type="text" id="subject" name="subject" class="form-control required" required placeholder='〇〇に関するお問い合わせ'>
   </div>
   <div class="form-group">
     <label for="text3">所属:</label>
-    <input type="text" id="affiliation" name="affiliation" class="form-control" >
+    <input type="text" id="affiliation" name="affiliation" class="form-control" placeholder='株式会社 〇〇'>
   </div>
   <div class="form-group">
     <label for="text4">メールアドレス(必須):</label>
-    <input type="text" id="email" name="email" class="form-control required" pattern="/^[-a-z0-9~!$%^&*_=+}{\'?]+(\.[-a-z0-9~!$%^&*_=+}{\'?]+)*@([a-z0-9_][-a-z0-9_]*(\.[-a-z0-9_]+)*\.(aero|arpa|biz|com|coop|edu|gov|info|int|mil|museum|name|net|org|pro|travel|mobi|[a-z][a-z])|([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}))(:[0-9]{1,5})?$/i" required>
+    <input type="text" id="email" name="email" class="form-control required" pattern="/^[-a-z0-9~!$%^&*_=+}{\'?]+(\.[-a-z0-9~!$%^&*_=+}{\'?]+)*@([a-z0-9_][-a-z0-9_]*(\.[-a-z0-9_]+)*\.(aero|arpa|biz|com|coop|edu|gov|info|int|mil|museum|name|net|org|pro|travel|mobi|[a-z][a-z])|([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}))(:[0-9]{1,5})?$/i" required placeholder='mail@example.com'>
   </div>
   <div class="form-group">
     <label for="textarea1">お問い合わせ内容(必須):</label>
