--- a/flask_sample/templates/layout.html
+++ b/flask_sample/templates/layout.html
@@ -17,15 +17,20 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav4" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="/">Navbar</a>
+      <a class="navbar-brand" href="/">お問い合わせフォーム</a>
       <div class="collapse navbar-collapse">
           <ul class="navbar-nav">
               <li class="nav-item active">
-                  <a class="nav-link" href="/info">info</a>
+                  <a class="nav-link" href="/info">contact</a>
               </li>
               <li class="nav-item active">
                   <a class="nav-link" href="/admin">admin</a>
               </li>
+              {%if admin %}
+              <li class="nav-item active">
+                <a class="nav-link" href="/sign_out">logout</a>
+              </li>
+              {% endif %}
           </ul>
       </div>
   </nav>
