--- a/flask_sample/templates/db_table.html
+++ b/flask_sample/templates/db_table.html
@@ -1,20 +1,29 @@
 {% extends "layout.html" %}
 {% block content %}
+<form action="/delete", method="POST">
 <div class="table-responsive">
   　　<table class="table table-condensed" >
     　　<table class="table table-hover" style="table-layout:fixed;width:100%;">
       <thead>
           <tr>
+            <td>
+              <button type="submit" value="submit" class="btn btn-danger">delete</button>
+              <a href="#" class='select_all' style="padding: 5px;font-size: 12px;">全選択</a>
+            </td>
             {%for k in data[0].keys()%}
               <td>{{k}}</td>
             {%endfor%}
-
           </tr>
       </thead>
       <tbody>
         {%for d in data%}
-          <tr>
+          <tr id='buttun'>
             {%for k,v in d.items()%}
+              {% if k=='id' %}
+              <td class="checkbox" style="word-wrap:break-word;">
+                <input class='cbgroup' type="checkbox" value={{v}} name='id' id={{v}}>
+              </td>
+              {%endif%}
               <td style="word-wrap:break-word;">{{v}}</td>
             {%endfor%}
           </tr>
@@ -23,4 +32,51 @@
   </table>
   　　</table>
   </div>
+</form>
+<script>
+// trタグに選択範囲付与
+$(document).ready(function() {
+    $('tr').click(function(event) {
+　　// チェックボックスがチェックされたら無視
+        if (event.target.type !== 'checkbox') {
+            $(':checkbox', this).trigger('click');
+        }
+    });
+});
+
+// shiftキーで範囲選択
+$(function(){
+		var checked_last = null;
+		$('.cbgroup').on('click', function(event){
+			if (event.shiftKey && checked_last) {
+				var $targets = $('.cbgroup');
+				var p1 = $targets.index(checked_last)
+				var p2 = $targets.index(this)
+				for (var i = Math.min(p1, p2); i <= Math.max(p1, p2); ++i) {
+					$targets.get(i).checked = checked_last.checked;
+				}
+			} else {
+				checked_last = this;
+			}
+		});
+  });
+
+// 全選択
+$(function() {
+ // aタグを選択する
+  $('a.select_all').click(function(){
+ 
+  // prop()でチェックの状態を取得
+  var prop = $('input').prop('checked');
+  // もしpropがチェック状態だったら
+  if (prop) {
+    // propでチェックと出力
+    $('input').trigger('click');
+  } else {
+    // テキストをリセット
+    $('input').trigger('click');
+    }
+  });
+});
+</script>
 {% endblock %}
