--- a/flask_sample/templates/layout.html
+++ b/flask_sample/templates/layout.html
@@ -17,7 +17,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav4" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="/">お問い合わせフォーム</a>
+      <a class="navbar-brand" href="/home">お問い合わせフォーム</a>
       <div class="collapse navbar-collapse">
           <ul class="navbar-nav">
               <li class="nav-item active">
